tests/specs/run/check_remote/no_check_remote.ts.disabled.out
error: TS2322 [ERROR]: Type '12' is not assignable to type '"a"'.
export const a: "a" = 12;
             ^
    at [WILDCARD]/type_error.ts:1:14
